--- a/store/templates/blank.html
+++ b/store/templates/blank.html
@@ -1,3 +1,33 @@
+<!--{% if product|is_in_cart:request.session.cart %}-->
+<!--                                        <div class="row no-gutters">-->
+<!--                                            <form action="/#{{product.id}}" class="col-2" method="POST">-->
+<!--                                                {% csrf_token %}-->
+<!--                                                <input hidden type="text" name="product" value="{{product.id}}">-->
+<!--                                                <input hidden type="text" name="remove" value="True">-->
+<!--                                                <input type="submit" value="-" class="btn btn-block btn-secondary">-->
+<!--                                            </form>-->
+<!--                                            <div class="text-center col">{{product|cart_quantity:request.session.cart}}-->
+<!--                                                in cart-->
+<!--                                            </div>-->
+<!--                                            <form action="/#{{product.id}}" class="col-2" method="POST">-->
+<!--                                                {% csrf_token %}-->
+<!--                                                <input hidden type="text" name="product" value="{{product.id}}">-->
+<!--                                                <input type="submit" value="+" class="btn btn-block btn-secondary">-->
+<!--                                            </form>-->
+<!--                                        </div>-->
+<!--                                        {% else %}-->
+<!--                                        <form action="/#{{product.id}}" method="POST">-->
+<!--                                            {% csrf_token %}-->
+<!--                                            <input hidden type="text" name="product" value="{{product.id}}">-->
+<!--                                            <input type="submit" class="float-right btn btn-block btn-outline-info"-->
+<!--                                                   value="Add To Cart">-->
+<!--                                        </form>-->
+<!--                                        {% endif %}-->
+
+
+
+
+
 # DATABASES = {
 #     'default': {
 #         'ENGINE': 'django.db.backends.mysql',
