For User Autthentication and Validation.....

--- a/store/templates/category.html
+++ b/store/templates/category.html
@@ -89,7 +89,7 @@
                                             <input hidden type="text" name="remove" value="True">
                                             <input type="submit" value="-" class="btn btn-block btn-secondary">
                                         </form>
-                                        <div class="text-center col">{{product|cart_quantity:request.session.cart}}
+                                        <div class="text-center col my-auto">{{product|cart_quantity:request.session.cart}}
                                             in cart
                                         </div>
                                         <form action="{{request.path}}" class="col-2" method="POST">
