Remove Responsiveness for mobile...

--- a/store/templates/blank.html
+++ b/store/templates/blank.html
@@ -276,9 +276,22 @@
 {% endblock %}
 
 
-
-
-
+<!--@media only screen and (max-width: 767px) {-->
+<!--  .breadcrumb_section:after{-->
+<!--	content:'';-->
+<!--	position:absolute;-->
+<!--	top:10% !important;-->
+<!--	left:5% !important;-->
+<!--	width:90% !important;-->
+<!--	height:80% !important;-->
+<!--	background:#0000009e;-->
+<!--	z-index:1;-->
+<!--  }-->
+<!--  .breadcrumb_section .page-title, .breadcrumb_section .breadcrumb{-->
+<!--	  padding-left: 10% !important;-->
+<!--    padding-right: 10% !important;-->
+<!--  }-->
+<!--}-->
 
 
 
