--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="Anil z" name="author">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
 
@@ -337,21 +337,26 @@
                         </div>
                         <div class="search_overlay"></div>
                     </li>
-                    <li class="dropdown cart_dropdown"><a class="nav-link cart_trigger" href="#"
-                                                          data-bs-toggle="dropdown"><i
-                            class="linearicons-cart"></i>
-                        <span class="cart_count">{{request.session.cart.keys|length}}</span></a>
+                    <li class="dropdown cart_dropdown">
+                        <a class="nav-link cart_trigger" href="#" data-bs-toggle="dropdown"><i
+                                class="linearicons-cart"></i>
+                            <span class="cart_count">{{request.session.cart.keys|length}}</span></a>
                         <div class="cart_box dropdown-menu dropdown-menu-right">
                             <ul class="cart_list">
-                                <!--                                {% for product in prducts %}-->
-                                <a href="#" class="item_remove"><i class="ion-close"></i></a> <a href="#">
-                                <li><img src="{{product.image.url}}" alt="cart_thumb1">
-                                    <span class="cart_quantity">{{product|cart_quantity:request.session.cart}}</span>
-                                    <span class="cart_amount">{{product|total_price:request.session.cart|currency}}</span>
-                                    <span> class="price_symbole">₹</span>
+                                {% for product in products %}
+                                {% with product_id=product.id|stringformat:"d" %}
+                                {% if product_id in request.session.cart %}
+                                <li>
+                                    <a href="{% url 'remove' item_id=product.id %}" class="item_remove"><i class="ion-close"></i></a>
+                                    <a href="#">
+                                        <img src="{{ product.image.url }}" alt="cart_thumb1">{{ product.product_title }}
+                                    </a>
+                                    <span class="cart_quantity">{{ request.session.cart|get_item:product_id }}
+                                        x <span class="cart_amount">{{ product.product_price|currency }}</span></span>
                                 </li>
-                            </a>
-                                <!--                                {% endfor %}-->
+                                {% endif %}
+                                {% endwith %}
+                                {% endfor %}
                             </ul>
                             <div class="cart_footer">
                                 <p class="cart_total"><strong>Subtotal:</strong> <span class="cart_price">
