Fulfil first Requirments...

--- a/store/templates/blank.html
+++ b/store/templates/blank.html
@@ -17,3 +17,17 @@
                                 <!--                                        </form>-->
                                 <!--                                    </div>-->
                                 <!--                                </td>-->
+
+
+
+
+<!-- <title>Cart</title>-->
+<!--    <style>-->
+<!--        .quantity-controls {-->
+<!--            display: flex;-->
+<!--            align-items: center;-->
+<!--        }-->
+<!--        .quantity-controls button {-->
+<!--            margin: 0 5px;-->
+<!--        }-->
+<!--    </style>-->
